[project]
name = "misskey-touka-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kornia>=0.7.4",
    "mipa>=0.4.2",
    "python-dotenv>=1.0.1",
    "timm>=1.0.11",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.46.2",
]
